Added a rick image and a few more lines

--- a/test.html
+++ b/test.html
@@ -1,4 +1,15 @@
-<h1> This is big heading </h1>
-<p> This is a parargraph element</p>
-<a href="https://google.com">I'm a clickable link</a>
-<a href="https://google.com" target = "_blank" title="Let's go to google">I'm a clickable link that opens in a new tab with a hover text</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body>
+	<h1> This is big heading </h1>
+	<p> This is a <b>paragraph</b> <i>element</i></p>
+	<a href="https://google.com">I'm a clickable link</a>
+	<a href="https://google.com" target = "_blank" title="Let's go to google">I'm a clickable link that opens in a new tab with a hover text</a>
+	<img src="img/Rick.png"> 
+	<p> my name is: <br> Rick Astley </p>
+	<img src="https://i.insider.com/602ee9ced3ad27001837f2ac">
+</body>
+</html>
